[package]
name          = "testing"
description   = "NFT Marketplace tests"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
rust-version  = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
schemars                     = { workspace = true }
cosmwasm-schema              = { workspace = true }
cosmwasm-std                 = { workspace = true }
cw2                          = { workspace = true }
cw-storage-plus              = { workspace = true }
cw20                         = { workspace = true }
cw20-base                    = { workspace = true }
cw721                        = { workspace = true }
cw721-base                   = { workspace = true }
cw721-metadata-onchain       = { workspace = true }
cw-utils                     = { workspace = true }
nft-marketplace-utils        = { workspace = true }
price-oracle-utils           = { workspace = true }
general-utils                = { workspace = true }
chihuahua-nft-marketplace    = { version = "0.0.1", path = "../contracts/chihuahua-nft-marketplace" }
oracle                       = { workspace = true }
cw2981-multiroyalties        = { version = "0.0.1", path = "../contracts/cw2981-multiroyalties" }

[dev-dependencies]
cw-multi-test                = { workspace = true }
anyhow                       = { workspace = true }