[package]
name          = "chihuahua-nft-marketplace"
description   = "NFT Marketplace for Chihuahua Chain"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
rust-version  = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
schemars                     = { workspace = true }
cosmwasm-schema              = { workspace = true }
cosmwasm-std                 = { workspace = true }
cw2                          = { workspace = true }
cw-storage-plus              = { workspace = true }
cw20                         = { workspace = true }
cw20-base                    = { workspace = true }
cw721                        = { workspace = true }
cw721-base                   = { workspace = true }
cw721-metadata-onchain       = { workspace = true }
cw-utils                     = { workspace = true }
cw2981-multiroyalties        = { version = "0.0.1", path = "../cw2981-multiroyalties" }
nft-marketplace-utils        = { workspace = true }
price-oracle-utils           = { workspace = true }
general-utils                = { workspace = true }
oracle                       = { workspace = true }

[dev-dependencies]
cw-multi-test                = { workspace = true }
anyhow                       = { workspace = true }
